--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,14 @@ version: '3'
 services:
 
   rbs_api_container:
-    image: rbs_api_image
+    #image: rbs_api_image
+    build: ./room-booking-system/api/
+    environment:
+      - MONGO_URI=mongodb://pythontest:pythontest@cluster0-shard-00-00.enocw.mongodb.net:27017,cluster0-shard-00-01.enocw.mongodb.net:27017,cluster0-shard-00-02.enocw.mongodb.net:27017/MongoDbToolCommonUnittest?ssl=true&replicaSet=atlas-qr78be-shard-0&authSource=admin&retryWrites=true&w=majority
+      - JWT_SECRET="jwtSecret_20200914"
+      - JWT_ALGORITHM="HS256"
+      - JWT_EXPIRES_IN=3600
+      - NODE_ENV=dev
     restart: always
     ports:
       - "7321:7321"
@@ -10,10 +17,11 @@ services:
       main:
   
   rbs_web_container:
-    image: rbs_web_image
+    #image: rbs_web_image
+    build: ./room-booking-system/web/
     restart: always
     ports:
-      - "8888:3000"
+      - "80:3000"
     networks:
       main:
 networks:
