--- a/room-booking-system/web/package.json
+++ b/room-booking-system/web/package.json
@@ -7,6 +7,8 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
+    "node-sass": "^4.14.1",
+    "node-sass-chokidar": "^1.5.0",
     "normalize.css": "^7.0.0",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
@@ -19,6 +21,8 @@
     "seed": "^0.4.4"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
     "start": "react-scripts start",
     "build": "react-scripts build && cp _redirects build/_redirects",
     "test": "react-scripts test --env=jsdom",
