--- a/room-booking-system/web/package.json
+++ b/room-booking-system/web/package.json
@@ -12,6 +12,7 @@
     "react": "^16.2.0",
     "react-big-calendar": "^0.28.0",
     "react-datetime": "^2.11.1",
+    "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.2.0",
     "react-loading-animation": "^1.4.0",
     "react-modal": "^3.1.11",
