--- a/room-booking-system/web/package.json
+++ b/room-booking-system/web/package.json
@@ -11,8 +11,9 @@
     "moment-timezone": "^0.5.14",
     "normalize.css": "^7.0.0",
     "query-string": "^5.0.1",
-    "react": "^16.2.0",
+    "react": "^17.0.1",
     "react-big-calendar": "^0.28.0",
+    "react-cookie": "^4.0.3",
     "react-datetime": "^2.11.1",
     "react-document-meta": "^3.0.0-beta.2",
     "react-dom": "^16.2.0",
